--- a/holobodega/static/templates/Index.html
+++ b/holobodega/static/templates/Index.html
@@ -17,7 +17,7 @@
       <h1>Bienvenido a <h1 style="color: #1D3AD2">Holobodega</h1></h1>
       <br>
       <div>
-        <a href="FormRegistrarPerro.php" class="action-container"><button class="action inventario">Inventario</button></a><a href="ConsultarMisPerros.php" class="action-container"><button class="action caja">Caja</button></a>
+        <a href="/inventory/product" class="action-container"><button class="action inventario">Inventario</button></a><a href="#" class="action-container"><button class="action caja">Caja</button></a>
       </div>
     </div>
 </body>
