--- a/holobodega/static/templates/inventory/product_form.html
+++ b/holobodega/static/templates/inventory/product_form.html
@@ -15,25 +15,21 @@
       <div class="row">
         <div class="col-8">
           <form method="POST" action="">
+            {% csrf_token %}
             <input name="name" class='form-control' id='name' placeholder='Nombre...' type='text'>
             <select name="category" class='form-control' id='category'>
-              <option value="Pitbull">Pitbull</option>
-              <option value="Bulldog">Bulldog</option>
-              <option value="Shichu">Shichu</option>
-              <option value="Pequines">Pequines</option>
-              <option value="San Bernardo">San Bernardo</option>
-              <option value="Chiguahua">Chiguahua</option>
+              {% for category in categories%}
+              <option value={{ category.id }}>{{ category.name }}</option>
+              {% endfor %}
             </select>
             <input name="barcode" class='form-control' id='barcode' placeholder='Código de Barra...' type='text'>
             <select name="producer" class='form-control' id='producer'>
-              <option value="Pitbull">Pitbull</option>
-              <option value="Bulldog">Bulldog</option>
-              <option value="Shichu">Shichu</option>
-              <option value="Pequines">Pequines</option>
-              <option value="San Bernardo">San Bernardo</option>
-              <option value="Chiguahua">Chiguahua</option>
+              {% for producer in producers%}
+              <option value={{ producer.id }}>{{ producer.name }}</option>
+              {% endfor %}
             </select>
-            <input name="stock" class='form-control' id='stock' type='number'>
+            <input name="stock" class='form-control' id='stock' placeholder='Cantidad...' type='number'>
+            <input name="price" class='form-control' id='price' placeholder='Precio...' type='number'>
             <button type="submit" class="btn waves-effect waves-light">
               Registrar
             </button>
