--- a/holobodega/static/templates/inventory/product_form.html
+++ b/holobodega/static/templates/inventory/product_form.html
@@ -10,7 +10,7 @@
 
 <body>
   <div>
-    <h1>Categorías</h1> 
+    <h1>Nuevo Producto</h1> 
     <div class="container container-center">
       <div class="row">
         <div class="col-8">
