--- a/holobodega/static/templates/inventory/category_form.html
+++ b/holobodega/static/templates/inventory/category_form.html
@@ -3,7 +3,7 @@
   {% load static %}
   <meta charset="utf-8">
   <html lang="es">
-  <link href='https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css' rel='stylesheet'type='text/css'>
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
@@ -13,11 +13,12 @@
     <h1>Nueva Categoría</h1> 
     <div class="container container-center">
       <div class="row">
-        <div class="col-8">
-          <form method="POST" action="">
+        <div class="col-6 offset-3">
+          <form class="d-flex flex-column " method="POST" action="">
             {% csrf_token %}
-            <input name="name" class='form-control' id='name' placeholder='Nombre...' type='text'>
-            <button type="submit" class="btn waves-effect waves-light">
+            <label for="name">Nombre</label>
+            <input name="name" class='form-control my-2' id='name' placeholder='Nombre...' type='text'>
+            <button type="submit" class="btn btn-primary waves-effect waves-light my-2">
               Crear
             </button>
           </form>
