--- a/holobodega/static/templates/inventory/product_form.html
+++ b/holobodega/static/templates/inventory/product_form.html
@@ -3,7 +3,7 @@
   {% load static %}
   <meta charset="utf-8">
   <html lang="es">
-  <link href='https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css' rel='stylesheet'type='text/css'>
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
@@ -13,24 +13,32 @@
     <h1>Nuevo Producto</h1> 
     <div class="container container-center">
       <div class="row">
-        <div class="col-8">
-          <form method="POST" action="">
+        <div class="col-6 offset-3">
+          <form method="POST" class="d-flex flex-column " action="">
             {% csrf_token %}
-            <input name="name" class='form-control' id='name' placeholder='Nombre...' type='text'>
-            <select name="category" class='form-control' id='category'>
+            <label for="name">Nombre</label>
+            <input name="name" class='form-control my-2' id='name' placeholder='Nombre...' type='text'>
+            <label for="category">Categoría</label>
+            <select name="category" class='form-select my-2' id='category'>
+              <option disabled selected value="">Seleccione la categoría</option>
               {% for category in categories%}
               <option value={{ category.id }}>{{ category.name }}</option>
               {% endfor %}
             </select>
-            <input name="barcode" class='form-control' id='barcode' placeholder='Código de Barra...' type='text'>
-            <select name="producer" class='form-control' id='producer'>
+            <label for="barcode">Código de Barra</label>
+            <input name="barcode" class='form-control my-2' id='barcode' placeholder='Código de Barra...' type='text'>
+            <label for="producer">Productor</label>
+            <select name="producer" class='form-select my-2' id='producer'>
+              <option disabled selected value="">Seleccione al productor</option>
               {% for producer in producers%}
               <option value={{ producer.id }}>{{ producer.name }}</option>
               {% endfor %}
             </select>
-            <input name="stock" class='form-control' id='stock' placeholder='Cantidad...' type='number'>
-            <input name="price" class='form-control' id='price' placeholder='Precio...' type='number'>
-            <button type="submit" class="btn waves-effect waves-light">
+            <label for="stock">Stock</label>
+            <input name="stock" class='form-control my-2' id='stock' placeholder='Cantidad...' type='number'>
+            <label for="price">Precio</label>
+            <input name="price" class='form-control my-2' id='price' placeholder='Precio...' type='number'>
+            <button type="submit" class="btn btn-primary waves-effect waves-light my-2">
               Registrar
             </button>
           </form>
