--- a/holobodega/static/templates/sale/cart.html
+++ b/holobodega/static/templates/sale/cart.html
@@ -1,42 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% load static %}
+    <meta charset="utf-8">
+    <title>HoloBodega</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet"> 
 </head>
+
 <body>
-    <table>
-        <thead>
-            <th>Nombre</th>
-            <th>Categoría</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th>Subtotal</th>
-        </thead>
-        <tbody>
-            {% for sale_line in sale.get_sale_lines %}
+    <div>
+      <h1>Caja</h1>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-8 offset-2">
+          <div class="d-flex">
+            <a class="btn btn-primary" href="/sale/products">Productos</a>
+            <a class="btn btn-primary" href="/sale/filter">Filtro</a>
+            <a class="btn btn-primary" href="/sale/debt">Deudas</a>
+            <a class="btn btn-primary disabled" href="/sale/cart">Carrito</a>
+          </div>
+          <form method="POST" action="" class="input-group mb-3">
+            {% csrf_token %}
+            <input id="search_input" name="search_input" type="text" class="form-control" placeholder="Búsqueda de producto" aria-label="Búsqueda de producto" aria-describedby="button-addon2">
+            <button class="btn btn-secondary" type="submit" id="search_button">Buscar</button>
+          </form>
+          <table class="table table-primary">
+            <thead>
+                <th>Nombre</th>
+                <th>Categoría</th>
+                <th>Precio</th>
+                <th>Cantidad</th>
+                <th>Subtotal</th>
+            </thead>
+            <tbody>
+                {% for sale_line in sale.get_sale_lines %}
+                    <tr>
+                        <td>{{sale_line.product.name}}</td>
+                        <td>{{sale_line.product.category.name}}</td>
+                        <td>{{sale_line.product.price}}</td>
+                        <td class="d-flex justify-content-between" >
+                            <a class="btn btn-secondary" href="/sale/cart/?id={{sale_line.product.id}}&update=remove">-</a>
+                            <p>{{sale_line.quantity}}</p>
+                            <a class="btn btn-secondary" href="/sale/cart/?id={{sale_line.product.id}}&update=add">+</a>
+                        </td>
+                        <td>{{sale_line.amount}}</td>
+                    </tr>
+                {% endfor %}
                 <tr>
-                    <td>{{sale_line.product.name}}</td>
-                    <td>{{sale_line.product.category.name}}</td>
-                    <td>{{sale_line.product.price}}</td>
-                    <td>
-                        <a href="/sale/cart/?id={{sale_line.product.id}}&update=remove">-</a>
-                        {{sale_line.quantity}}
-                        <a href="/sale/cart/?id={{sale_line.product.id}}&update=add">+</a>
-                    </td>
-                    <td>{{sale_line.amount}}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><b>Total:</b> {{sale.update_total}}</td>
                 </tr>
-            {% endfor %}
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><b>Total:</b> {{sale.update_total}}</td>
-            </tr>
-        </tbody>
-    </table>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
