fix: with no disabled buttons

--- a/holobodega/static/templates/sale/cart.html
+++ b/holobodega/static/templates/sale/cart.html
@@ -19,9 +19,8 @@
         <div class="col-8 offset-2">
           <div class="d-flex">
             <a class="btn btn-primary" href="/sale/products">Productos</a>
-            <a class="btn btn-primary" href="/sale/filter">Filtro</a>
             <a class="btn btn-primary" href="/sale/debt">Deudas</a>
-            <a class="btn btn-primary disabled" href="/sale/cart">Carrito</a>
+            <a class="btn btn-primary" href="/sale/cart">Carrito</a>
           </div>
           <form method="POST" action="" class="input-group mb-3">
             {% csrf_token %}
