--- a/holobodega/static/templates/sale/products.html
+++ b/holobodega/static/templates/sale/products.html
@@ -17,8 +17,7 @@
       <div class="row">
         <div class="col-8 offset-2">
           <div class="d-flex">
-            <a class="btn btn-primary disabled" href="/sale/products">Productos</a>
-            <a class="btn btn-primary" href="/sale/filter">Filtro</a>
+            <a class="btn btn-primary" href="/sale/products">Productos</a>
             <a class="btn btn-primary" href="/sale/debt">Deudas</a>
             <a class="btn btn-primary " href="/sale/cart">Carrito</a>
           </div>
