--- a/holobodega/static/templates/sale/debt-edit.html
+++ b/holobodega/static/templates/sale/debt-edit.html
@@ -14,12 +14,13 @@
     <div class="container container-center">
       <div class="row">
         <div class="col-4 offset-4">
-          <form class="d-flex flex-column " method="POST" action="">
+          <form class="d-flex flex-column " method="POST" action="/sale/debt/cancel-debt/">
             {% csrf_token %}
             <h2 >Deudor</h2>
             <h2 >{{debtor.name}}</h2>
             <label for="payment">Monto abonado</label>
             <input name="payment" class='form-control my-2' id="payment" type='number'>
+            <input name="debtor" id="debtor" value="{{debtor.id}}" hidden>
             <div class="d-flex justify-content-between">
               <a href="/sale/debt" type="submit" class="btn btn-secondary waves-effect waves-light my-2">
                 Cancelar
@@ -28,7 +29,6 @@
                 Guardar
               </button>
             </div>
-            
           </form>
         </div>
       </div>
