--- a/holobodega/static/templates/Index.html
+++ b/holobodega/static/templates/Index.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
+  <head>
+    {% load static %}
+    <meta charset="utf-8" />
+    <title>HoloBodega</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  </head>
 
-<head>
-  {% load static %}
-  <meta charset="utf-8">
-  <title>Guardería Atrás Furros</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  <link href="{% static 'css/input.css' %}" rel="stylesheet">
-</head>
-
-<body>
-    <div class="body-text">
-      <br>
-      <h1>Bienvenido a <h1 style="color: #1D3AD2">Holobodega</h1></h1>
-      <br>
+  <body style="height:100%;">
+    <nav class="navbar navbar-dark bg-primary">
+      <a class="navbar-brand" href="/">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png"
+          style="width: 20px"
+          alt=""
+        />
+        HoloBodega</a
+      >
+    </nav>
+    <div class="container d-flex flex-column justify-content-center" style="height:100%">
+      <div class="row ">
+        <div class="col-12 ">
+      <br />
+      <h1>
+        Bienvenido a
+        <h1 style="color: #1d3ad2">Holobodega</h1>
+      </h1>
+      <br />
       <div>
-        <a href="/inventory/product" class="action-container"><button class="action inventario">Inventario</button></a><a href="#" class="action-container"><button class="action caja">Caja</button></a>
+        <a href="/inventory/product/"
+          ><button class="btn btn-primary mr-4">Inventario</button></a
+        ><a href="/sale/products/"
+          ><button class="btn btn-primary ml-4">Caja</button></a
+        >
       </div>
     </div>
-</body>
-
+    </div>
+    </div>
+  </body>
 </html>
