--- a/holobodega/static/templates/inventory/category_form.html
+++ b/holobodega/static/templates/inventory/category_form.html
@@ -3,12 +3,20 @@
   {% load static %}
   <meta charset="utf-8">
   <html lang="es">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    /> 
   <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css' rel='stylesheet'type='text/css'>
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png" style="width:20px;" alt=""> HoloBodega</a>
+  </nav>
   <div>
     <h1>Nueva Categoría</h1> 
     <div class="container container-center">
