--- a/holobodega/static/templates/inventory/product_form.html
+++ b/holobodega/static/templates/inventory/product_form.html
@@ -3,12 +3,20 @@
   {% load static %}
   <meta charset="utf-8">
   <html lang="es">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+  /> 
   <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css' rel='stylesheet'type='text/css'>
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png" style="width:20px;" alt=""> HoloBodega</a>
+  </nav>
   <div>
     <h1>Nuevo Producto</h1> 
     <div class="container container-center">
@@ -19,7 +27,7 @@
             <label for="name">Nombre</label>
             <input name="name" class='form-control my-2' id='name' placeholder='Nombre...' type='text'>
             <label for="category">Categoría</label>
-            <select name="category" class='form-select my-2' id='category'>
+            <select name="category" class='custom-select my-2' id='category'>
               <option disabled selected value="">Seleccione la categoría</option>
               {% for category in categories%}
               <option value={{ category.id }}>{{ category.name }}</option>
@@ -28,7 +36,7 @@
             <label for="barcode">Código de Barra</label>
             <input name="barcode" class='form-control my-2' id='barcode' placeholder='Código de Barra...' type='text'>
             <label for="producer">Productor</label>
-            <select name="producer" class='form-select my-2' id='producer'>
+            <select name="producer" class='custom-select my-2' id='producer'>
               <option disabled selected value="">Seleccione al productor</option>
               {% for producer in producers%}
               <option value={{ producer.id }}>{{ producer.name }}</option>
@@ -37,7 +45,7 @@
             <label for="stock">Stock</label>
             <input name="stock" class='form-control my-2' id='stock' placeholder='Cantidad...' type='number'>
             <label for="price">Precio</label>
-            <input name="price" class='form-control my-2' id='price' placeholder='Precio...' type='number'>
+            <input name="price" class='form-control my-2' id='price' placeholder='Precio...' type='number' step="0.01">
             <button type="submit" class="btn btn-primary waves-effect waves-light my-2">
               Registrar
             </button>
