--- a/holobodega/static/templates/sale/debt.html
+++ b/holobodega/static/templates/sale/debt.html
@@ -4,12 +4,19 @@
     {% load static %}
     <meta charset="utf-8">
     <title>HoloBodega</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />    
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="{% static 'css/style.css' %}" rel="stylesheet"> 
 </head>
 <body>
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png" style="width:20px;" alt=""> HoloBodega</a>
+  </nav>
     <div>
       <h1>Caja</h1>
     </div>
@@ -17,9 +24,9 @@
       <div class="row">
         <div class="col-8 offset-2">
           <div class="d-flex">
-            <a class="btn btn-primary" href="/sale/products">Productos</a>
-            <a class="btn btn-primary" href="/sale/debt">Deudas</a>
-            <a class="btn btn-primary " href="/sale/cart">Carrito</a>
+            <a class="btn btn-primary" href="/sale/products/">Productos</a>
+            <a class="btn btn-primary" href="/sale/debt/">Deudas</a>
+            <a class="btn btn-primary " href="/sale/cart/">Carrito</a>
           </div>
           <form method="GET" action="/sale/debt/" class="input-group mb-3">
             {% csrf_token %}
@@ -41,12 +48,13 @@
                           {% if debtor.total_debt > 0 %}
                             <a class="btn btn-primary" id="debt-edit-button" href="{% url 'debt_edit' debtor.id %}">Abonar</a>
                           {% else %}
-                          <a class="btn btn-secondary" id="debt-edit-button" disabled>Abonar</a>
+                          <a class="btn btn-secondary text-light" id="debt-edit-button" disabled>Abonar</a>
                           {% endif %}
                             <form method="POST" action="/sale/debt/add-debt/" class="input-group mb-3">
                             {% csrf_token %}
                             <input name="debtor" value="{{debtor.id}}" hidden>
-                              <button class="btn btn-primary" type="submit">
+                            
+                              <button class="btn btn-primary mx-auto mt-2" type="submit">
                                 Registrar deuda
                               </button>
                           </form>
@@ -57,14 +65,13 @@
                   <td></td>
                   <td><b>Total:</b> {{sale.update_total}}</td>
                   <td>
-                    
                     <form method="POST" action="" class="input-group mb-3">
                       {% csrf_token %}
-                      <div class="dropdown">
-                        <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#debtorModal" id="debtor-register-button">
+                      
+                        <button class="btn btn-primary mx-auto" type="button" data-bs-toggle="modal" data-bs-target="#debtorModal" id="debtor-register-button">
                           Agregar Deudor
                         </button>
-                      </div>
+                      
                     </form>
                   </td>
               </tr>
@@ -78,7 +85,7 @@
                   <h5 class="modal-title">Crear Deudor</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>  
-                  <form method="POST" action="/sale/debt/create-debtor">
+                  <form method="POST" action="/sale/debt/create-debtor/">
                     {% csrf_token %}
                     <div class="modal-body">
                     <div class="mb-3">
