--- a/holobodega/static/templates/sale/products.html
+++ b/holobodega/static/templates/sale/products.html
@@ -4,12 +4,20 @@
     {% load static %}
     <meta charset="utf-8">
     <title>HoloBodega</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+  /> 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <link href="{% static 'css/style.css' %}" rel="stylesheet"> 
 </head>
 <body>
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png" style="width:20px;" alt=""> HoloBodega</a>
+  </nav>
     <div>
       <h1>Caja</h1>
     </div>
@@ -17,9 +25,9 @@
       <div class="row">
         <div class="col-8 offset-2">
           <div class="d-flex">
-            <a class="btn btn-primary" href="/sale/products">Productos</a>
-            <a class="btn btn-primary" href="/sale/debt">Deudas</a>
-            <a class="btn btn-primary " href="/sale/cart">Carrito</a>
+            <a class="btn btn-primary" href="/sale/products/">Productos</a>
+            <a class="btn btn-primary" href="/sale/debt/">Deudas</a>
+            <a class="btn btn-primary " href="/sale/cart/">Carrito</a>
           </div>
           <form method="GET" action="/sale/products/" class="input-group mb-3">
             {% csrf_token %}
