--- a/holobodega/static/templates/inventory/products.html
+++ b/holobodega/static/templates/inventory/products.html
@@ -28,7 +28,7 @@
           <div class="d-flex">
             <a class="btn btn-primary disabled" href="/inventory/product/">Productos</a>
             <a class="btn btn-primary" href="/inventory/category/">Categorías</a>
-            <a class="btn btn-primary" style="margin-left: auto;" href="/inventory/new_product">Nuevo Producto</a>
+            <a class="btn btn-primary" style="margin-left: auto;" href="/inventory/new_product/">Nuevo Producto</a>
           </div>
           <form method="POST" action="{% url 'search_product' %}" class="input-group mb-3">
             {% csrf_token %}
