--- a/holobodega/static/templates/sale/debt-edit.html
+++ b/holobodega/static/templates/sale/debt-edit.html
@@ -30,7 +30,7 @@
             <input name="payment" class='form-control my-2' id="payment" type='number'>
             <input name="debtor" id="debtor" value="{{debtor.id}}" hidden>
             <div class="d-flex justify-content-between">
-              <a href="/sale/debt" type="submit" class="btn btn-secondary waves-effect waves-light my-2">
+              <a href="/sale/debt/" type="submit" class="btn btn-secondary waves-effect waves-light my-2">
                 Cancelar
               </a>
               <button type="submit" class="btn btn-primary waves-effect waves-light my-2">
