--- a/holobodega/static/templates/inventory/products.html
+++ b/holobodega/static/templates/inventory/products.html
@@ -23,6 +23,13 @@
       <h1>Productos</h1>
     </div>
     <div class="container">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-warning" role="alert">
+        {{message}}
+          </div>
+          {% endfor %}
+      {% endif %}
       <div class="row">
         <div class="col-8 offset-2">
           <div class="d-flex">
