feat: add stock

--- a/holobodega/static/templates/inventory/products.html
+++ b/holobodega/static/templates/inventory/products.html
@@ -63,6 +63,7 @@
                       Opciones
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="options_dropdown">
+                      <li><a class="dropdown-item" href="/inventory/product/add-stock/{{product.id}}/info/">Agregar Stock</a></li>
                       <li><a class="dropdown-item" href="{% url 'delete_product' product.id %}">Eliminar</a></li>
                     </ul>
                   </div></td>
