dashboard y detalle de ventas

--- a/holobodega/static/templates/sale/products.html
+++ b/holobodega/static/templates/sale/products.html
@@ -35,6 +35,7 @@
             <a class="btn btn-primary" href="/sale/products/">Productos</a>
             <a class="btn btn-primary" href="/sale/debt/">Deudas</a>
             <a class="btn btn-primary " href="/sale/cart/">Carrito</a>
+            <a class="btn btn-primary " href="/sale/cash/">Caja</a>
           </div>
           <form method="GET" action="/sale/products/" class="input-group mb-3">
             {% csrf_token %}
