fix: delete category fixed, few style changes

--- a/holobodega/static/templates/inventory/categories.html
+++ b/holobodega/static/templates/inventory/categories.html
@@ -52,7 +52,7 @@
                       Opciones
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <li><a class="dropdown-item" href="#">Eliminar</a></li>
+                      <li><a class="dropdown-item" href="{% url 'delete_category' category.id %}">Eliminar</a></li>
                     </ul>
                   </div></td>
                 </tr>
