--- a/holobodega/static/templates/sale/cart.html
+++ b/holobodega/static/templates/sale/cart.html
@@ -28,12 +28,14 @@
             <a class="btn btn-primary" href="/sale/products/">Productos</a>
             <a class="btn btn-primary" href="/sale/debt/">Deudas</a>
             <a class="btn btn-primary" href="/sale/cart/">Carrito</a>
+            <a class="btn btn-primary " href="/sale/cash/">Caja</a>
           </div>
+          <!--
           <form method="POST" action="" class="input-group mb-3">
             {% csrf_token %}
             <input id="search_input" name="search_input" type="text" class="form-control" placeholder="Búsqueda de producto" aria-label="Búsqueda de producto" aria-describedby="button-addon2">
             <button class="btn btn-secondary" type="submit" id="search_button">Buscar</button>
-          </form>
+          </form>-->
           <table class="table table-primary">
             <thead>
                 <th>Nombre</th>
