--- a/holobodega/static/templates/sale/sales.html
+++ b/holobodega/static/templates/sale/sales.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% load static %}
+    <meta charset="utf-8">
+    <title>HoloBodega</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+  /> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    
+    <link href="{% static 'css/style.css' %}" rel="stylesheet"> 
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png" style="width:20px;" alt=""> HoloBodega</a>
+      </nav>
+    <div class="container">
+        <div class="row">
+          <div class="col-8 offset-2">
+            <h1>Venta del día: {{total}}</h1>
+            <div class="d-flex">
+                <a class="btn btn-primary" href="/sale/products/">Productos</a>
+                <a class="btn btn-primary" href="/sale/debt/">Deudas</a>
+                <a class="btn btn-primary" href="/sale/cart/">Carrito</a>
+                <a class="btn btn-primary " href="/sale/cash/">Caja</a>
+              </div>
     <table class="table table-primary">
-        <h1>Venta del día: {{total}}</h1>
+        
         <thead>
             <th>Hora</th>
             <th>Total</th>
@@ -24,5 +45,8 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
+</div>
+</div>
 </body>
 </html>
