--- a/holobodega/static/templates/sale/sale-detail.html
+++ b/holobodega/static/templates/sale/sale-detail.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% load static %}
+    <meta charset="utf-8">
+    <title>HoloBodega</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    /> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    
+    <link href="{% static 'css/style.css' %}" rel="stylesheet"> 
 </head>
 <body>
-    <table>
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Hololive_triangles_logo.svg/476px-Hololive_triangles_logo.svg.png" style="width:20px;" alt=""> HoloBodega</a>
+      </nav>
+    <div class="container">
+        <div class="row">
+          <div class="col-8 offset-2">
+    <table  class="table table-primary">
         <thead>
             <th>Nombre</th>
             <th>Categoría</th>
@@ -34,5 +48,8 @@
             </tr>
         </tbody>
     </table>
+</div>
+</div>
+</div>
 </body>
 </html>
