--- a/holobodega/static/templates/sale/debt.html
+++ b/holobodega/static/templates/sale/debt.html
@@ -72,7 +72,7 @@
                 {% endfor %}
                 <tr>
                   <td></td>
-                  <td><b>Total:</b> {{sale.update_total}}</td>
+                  <td><b>Total:</b> {{suma}}</td>
                   <td>
                     <form method="POST" action="" class="input-group mb-3">
                       {% csrf_token %}
